@startuml Species

class Species {
  +species_id
  +species_name
  +price
}

class Breeds {
  +breed_id
  +breed_name
  +breeds_id
  +is_mixed
  +price
}

class Pets {
  +pet_id
  +pets_id
  +price
}

class Toys {
  +toy_id
  +toy_name
  +species_id
  +price
}

Species --> Breeds : has
Species --> Pets : has
Species --> Toys : has
@enduml